pkg/lang/testdata/ub/inputs/invalid/decl-not-object.ub
inputs: {
  region: 'us-east-1'
}
